--- a/src/calendar.css
+++ b/src/calendar.css
@@ -1,3 +1,9 @@
+* {
+  background-color: #08161b;
+  color: #839496;
+  font-weight: bold;
+}
+
 .calendar {
   width: 900px;
   height: 600px;
@@ -14,7 +20,7 @@
   margin: auto;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .title {
@@ -60,21 +66,19 @@
 .calendar-day {
   width: 125px;
   height: 75px;
-  position: relative;
-  border: 1px solid #a6a6a6;
 }
 
 .calendar-day p {
-  position: absolute;
-  right: 10px;
+  text-align: center;
   color: #a6a6a6;
 }
 
-.current p {
-  color: #000000;
+.selected {
+  background-color: #839496;
 }
 
 .selected p {
-  color: #cc0000;
+  color: #08161b;
+  background-color: #839496;
   font-weight: bold;
 }
